--- a/files/etc/collectd/conf-available/read-network.conf
+++ b/files/etc/collectd/conf-available/read-network.conf
@@ -1,9 +1,8 @@
 # https://collectd.org/wiki/index.php/Plugin:Network
 LoadPlugin "network"
 <Plugin "network">
-  <Server "collectd">
+  <Listen "0.0.0.0">
     # SecurityLevel "Encrypt"
-    # Username "username"
-    # Password "password"
-  </Server>
+    # AuthFile "/etc/collectd/auth_file"
+  </Listen>
 </Plugin>
